@@ -380,6 +380,11 @@ int pslr_set_white_balance(pslr_handle_t h, pslr_white_balance_mode_t wb_mode, u
     return ipslr_handle_command_x18( p, true, 0x10, 3, wb_mode, wb_adjust_mg, wb_adjust_ba);
 }
 
+int pslr_set_flash_mode(pslr_handle_t h, pslr_flash_mode_t value) {
+    ipslr_handle_t *p = (ipslr_handle_t *) h;
+    return ipslr_handle_command_x18( p, true, 0x04, 1, value, 0, 0);
+}
+
 int pslr_set_flash_exposure_compensation(pslr_handle_t h, pslr_rational_t value) {
     ipslr_handle_t *p = (ipslr_handle_t *) h;
     return ipslr_handle_command_x18( p, true, 0x1a, 2, value.nom, value.denom, 0);    
