@@ -328,6 +328,7 @@ int pslr_set_iso(pslr_handle_t h, uint32_t value, uint32_t auto_min_value, uint3
 int pslr_set_ec(pslr_handle_t h, pslr_rational_t value);
 
 int pslr_set_white_balance(pslr_handle_t h, pslr_white_balance_mode_t wb_mode, uint32_t wb_adjust_mg, uint32_t wb_adjust_ba);
+int pslr_set_flash_mode(pslr_handle_t h, pslr_flash_mode_t value);
 int pslr_set_flash_exposure_compensation(pslr_handle_t h, pslr_rational_t value);
 int pslr_set_drive_mode(pslr_handle_t h, pslr_drive_mode_t drive_mode);
 int pslr_set_af_mode(pslr_handle_t h, pslr_af_mode_t af_mode);
